# bevy-minimal-game

./: .gitignore  Cargo.toml  README.md
src/: bullet.rs  game_state.rs  main.rs  player.rs  ui.rs  zombie.rs
